unpackaged/main/default/objects/ACClabs_Log_Settings__c/ACClabs_Log_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls error logging settings for ACC Labs packages</description>
    <label>ACClabs Log Settings</label>
</CustomObject>