unpackaged/main/default/objects/ACClabs_Log_Settings__c/fields/Error_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Addresses__c</fullName>
    <description>Comma separated list of email addresses to notify on error.</description>
    <inlineHelpText>Comma separated list of email addresses to notify on error.</inlineHelpText>
    <label>Error Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>