unpackaged/main/default/objects/ACClabs_Log_Settings__c/fields/Log_Errors__c.field-meta.xml
<CustomField>
    <fullName>Log_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will generate log records when automations fail.</description>
    <inlineHelpText>If checked, will generate log records when automations fail.</inlineHelpText>
    <label>Log Errors</label>
    <type>Checkbox</type>
</CustomField>