unpackaged/main/default/objects/ACClabs_Log_Settings__c/fields/Send_Error_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Error_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will send error emails on failure to defined email addresses</description>
    <inlineHelpText>If checked, will send error emails on failure to defined email addresses</inlineHelpText>
    <label>Send Error Emails</label>
    <type>Checkbox</type>
</CustomField>